@@ -1,7 +1,7 @@
 module Spec
   module Rails
     module VERSION #:nodoc:
-      BUILD_TIME_UTC = 20071217181808
+      BUILD_TIME_UTC = 20071219112345
     end
   end
 end
